--- a/src/components/inputWrapper/InputWrapper.module.css
+++ b/src/components/inputWrapper/InputWrapper.module.css
@@ -4,7 +4,6 @@
   gap: 0.5rem;
   justify-content: center;
   min-width: 150px;
-  /*  twijfel of hier flex: 1 nodig is, nog uitzoeken */
 }
 
 .column {
@@ -27,4 +26,13 @@
 .large {
   min-width: 400px;
   max-width: 600px;
+}
+
+/* Media Queries */
+
+@media (max-width: 768px) {
+  .input-wrapper {
+    width: 100%;
+    max-width: 100%;
+  }
 }
