--- a/src/pages/workoutBuilder/WorkoutBuilder.module.css
+++ b/src/pages/workoutBuilder/WorkoutBuilder.module.css
@@ -1,31 +1,42 @@
 .workout-page {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  flex: 1;
 }
 
 .workout-page__header {
   display: flex;
   margin-top: 1rem;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
+  width: 100%;
+  flex-direction: row;
   margin-bottom: 1rem;
   gap: 1rem;
 }
 
-.search-container {
+.exercise-search-container {
   position: relative;
+  width: 100%;
   display: flex;
   flex-direction: column;
+  gap: 1rem;
 }
-
-.workout-page__header > :nth-child(1) {
+.workout-name-container {
+  width: 100%;
   display: flex;
+  justify-content: flex-end;
+  flex-direction: row;
   gap: 1rem;
 }
 
-.workout-page__header > :nth-child(2) {
-  display: flex;
-  gap: 1rem;
+/* Media Queries */
+
+@media (max-width: 768px) {
+  .workout-page__header {
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+
+  .workout-name-container {
+    justify-content: stretch;
+  }
 }
