--- a/src/components/snackbar/Snackbar.module.css
+++ b/src/components/snackbar/Snackbar.module.css
@@ -39,10 +39,7 @@
   min-height: 1rem;
   min-width: 1rem;
   cursor: pointer;
-}
-
-.snackbar__content > span > :first-child:hover {
-  color: var(--color-primary-light);
+  color: #ffffff;
 }
 
 .snackbar--success {
