--- a/src/components/clientWorkouts/ClientWorkouts.module.css
+++ b/src/components/clientWorkouts/ClientWorkouts.module.css
@@ -1,20 +1,44 @@
-.client-workouts {
-}
 .client-workouts__list {
   list-style: none;
   margin: 0;
   padding: 1rem 0;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
   width: 100%;
 }
 
 .client-workouts__list-item {
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  min-width: 0;
-  max-width: 500px;
+  align-items: center;
+  width: 100%;
+  padding: 0.5rem;
   flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.client-workouts__list-item:nth-child(odd) {
+  background-color: var(--color-white);
+}
+
+.client-workouts__list-item > :first-child {
+  display: flex;
+  justify-content: flex-start;
+  flex-basis: 250px;
+  gap: 1rem;
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-wrap: wrap;
+}
+
+.client-workouts__list-item > :nth-child(2) {
+  padding: 0.5rem;
+  background-color: var(--color-gray-mediumlight);
+  color: var(--color-gray-dark);
+  border-radius: var(--border-radius-sm);
+  cursor: pointer;
+}
+
+.client-workouts__list-item > :nth-child(2):hover {
+  color: var(--color-primary);
 }
