(feat)major update/fix to layout component styling and multiple overlapping css interactions. Sidenav update, tooltip component added, pages styling changes, basic authcontext component, password validation and signup flow

--- a/src/components/button/Button.module.css
+++ b/src/components/button/Button.module.css
@@ -51,6 +51,12 @@
   background-color: var(--color-primary-light);
 }
 
+.disabled {
+  cursor: not-allowed;
+  background-color: var(--color-gray-medium);
+  color: var(--color-white);
+}
+
 /*Danger en succes nog maken alsook de hover states*/
 
 /* Sizes */
