--- a/src/components/dashboardCard/DashboardCard.module.css
+++ b/src/components/dashboardCard/DashboardCard.module.css
@@ -7,9 +7,9 @@
   flex-direction: column;
   border-radius: var(--border-radius-sm);
   height: 100%;
-  overflow: auto;
   padding: var(--space-md);
   border: 1px solid var(--color-gray-mediumlight);
+  overflow: hidden;
 }
 
 .dashboard-card__title-container {
@@ -27,7 +27,7 @@
 
 .dashboard-card__content-container {
   display: flex;
-  flex-grow: 1;
+  flex: 1 1 auto;
 }
 
 .direction-column {
@@ -40,9 +40,9 @@
 
 /* Media Queries */
 
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   .dashboard-card {
-    height: auto;
     overflow: visible;
+    height: auto;
   }
 }
