--- a/src/pages/clients/Clients.module.css
+++ b/src/pages/clients/Clients.module.css
@@ -1,6 +1,8 @@
 .clients-page {
-  width: 100%;
-  height: 100%;
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  flex: 1;
 }
 
 .clients-page__header {
