--- a/src/pages/dashboard/Dashboard.module.css
+++ b/src/pages/dashboard/Dashboard.module.css
@@ -5,9 +5,8 @@
   grid-template-rows: 150px 1fr;
   gap: 1rem;
   width: 100%;
+  height: 100%;
   min-height: 0;
-  height: auto;
-  overflow-y: visible;
   grid-template-areas:
     "one two three side"
     "main main milestones side";
@@ -36,21 +35,22 @@
 .side-content {
   grid-area: side;
 }
-
+.card-one,
+.card-two,
+.card-three,
 .milestones-content,
 .main-content,
 .side-content {
-  overflow: auto;
   min-height: 0;
-  max-height: 100%;
+  height: 100%;
 }
 
 /* Media Queries */
 
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   .dashboard-container {
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
+    grid-template-rows: auto;
     grid-template-areas:
       "one"
       "two"
@@ -58,6 +58,19 @@
       "main"
       "milestones"
       "side";
+  }
+  .card-one,
+  .card-two,
+  .card-three,
+  .main-content,
+  .milestones-content,
+  .side-content {
+    min-height: auto;
+  }
+
+  /* Feels like a 'hack' to force whitespace.. */
+  .side-content {
+    margin-bottom: var(--space-lg);
   }
 }
 
