--- a/src/pages/workouts/Workouts.module.css
+++ b/src/pages/workouts/Workouts.module.css
@@ -14,19 +14,21 @@
 .workouts-page__controls {
   display: flex;
   flex-direction: row;
+  width: 100%;
   justify-content: space-between;
-  align-items: center;
+  align-items: stretch;
   padding: 1rem 0;
   gap: 1rem;
+  flex-wrap: wrap;
 }
 
 .workouts-page__controls > :nth-child(1) {
+  display: flex;
+  gap: 1rem;
 }
 
 .workouts-page__controls > :nth-child(2) {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
+  width: 100%;
 }
 
 .workout-page__list {
@@ -83,7 +85,11 @@
 
   .workouts-page__controls {
     flex-direction: column;
-    align-items: stretch;
+    gap: 0.5rem;
+  }
+
+  .workouts-page__controls > :nth-child(1) {
+    flex-direction: column;
     gap: 0.5rem;
   }
 }
