(feat) finished user auth context, no content component, basic styling changes, bugfix with workout template deletion and changed deleting to archiving to keep workout template records for later use

--- a/src/pages/clientProfile/ClientProfile.module.css
+++ b/src/pages/clientProfile/ClientProfile.module.css
@@ -76,7 +76,7 @@
 }
 
 .workout-button {
-  padding: 1rem 2rem;
+  padding: 1rem;
   background-color: var(--color-gray-dark);
   color: #ffffff;
   border-radius: var(--border-radius-sm);
@@ -164,7 +164,7 @@
 
 /* Media Queries */
 
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
   .profile-page__container {
     display: flex;
     flex-direction: column;
