--- a/src/components/navbar/sidenav/SideNav.module.css
+++ b/src/components/navbar/sidenav/SideNav.module.css
@@ -44,9 +44,10 @@
 }
 
 .side-nav img {
-  height: 30px;
+  height: 50px;
   margin: 1rem;
-  transform: rotateY(180deg);
+  border-radius: 50%;
+  border: 2px solid var(--color-primary);
 }
 
 .side-nav ul {
