--- a/src/components/dashboardCard/DashboardCard.module.css
+++ b/src/components/dashboardCard/DashboardCard.module.css
@@ -9,7 +9,7 @@
   height: 100%;
   padding: var(--space-md);
   border: 1px solid var(--color-gray-mediumlight);
-  overflow: hidden;
+  overflow: auto;
 }
 
 .dashboard-card__title-container {
