--- a/src/components/button/Button.module.css
+++ b/src/components/button/Button.module.css
@@ -29,7 +29,7 @@
 
 .tertiary {
   background-color: transparent;
-  border: 2px solid var(--color-primary);
+  border: 1px solid var(--color-primary);
 }
 
 .success {
@@ -49,6 +49,7 @@
 
 .tertiary:hover {
   background-color: var(--color-primary-light);
+  color: #ffffff;
 }
 
 .disabled {
