--- a/src/components/navbar/sidenav/SideNav.module.css
+++ b/src/components/navbar/sidenav/SideNav.module.css
@@ -113,3 +113,10 @@
 .collapsed .side-nav__sign-out span {
   display: none;
 }
+
+/* Media Queries */
+
+/* TODO: Media query schrijven voor het collapsen van de side nav bij < 768px schermen. Moet icm kunnen met de toggle.*/
+
+@media (max-width: 768px) {
+}
