--- a/src/components/selectField/SelectField.module.css
+++ b/src/components/selectField/SelectField.module.css
@@ -10,6 +10,7 @@ select {
   line-height: 1.5;
   background-color: var(--color-white);
   box-shadow: var(--element-shadow-subtle);
+  color: var(--color-gray-dark);
 }
 
 .select-wrapper {
