(fix) minor changes and fixes

--- a/src/components/trackExerciseCard/TrackExerciseCard.module.css
+++ b/src/components/trackExerciseCard/TrackExerciseCard.module.css
@@ -57,3 +57,9 @@
 .open-card {
   display: none;
 }
+
+.track-exercise-card__footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
