--- a/src/components/button/Button.module.css
+++ b/src/components/button/Button.module.css
@@ -62,6 +62,11 @@
 
 /* Sizes */
 
+.extra-small {
+  padding: 0.3rem 0.6rem;
+  font-size: var(--font-xs);
+}
+
 .small {
   padding: 0.5rem 1rem;
   font-size: var(--font-sm);
